<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.blackhillsoftware.samples</groupId>
	<artifactId>gimapi-samples</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>EasyGIMAPI Samples</name>
	<url>https://www.blackhillsoftware.com</url>

	<repositories>
		<repository>
			<id>black-hill-software</id>
			<name>Black Hill Software Repository</name>
			<url>https://repository.blackhillsoftware.com/public</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>

		<!-- Plugin versions -->
		<maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>

		<!-- Dependency versions -->
		<bhs-gimapi.version>0.9.2</bhs-gimapi.version>
		<jackson.annotations.version>2.21</jackson.annotations.version>
		<jackson.databind.version>3.1.3</jackson.databind.version>
	</properties>

	<build>
    <sourceDirectory>java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>[3.8.1,)</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
					<execution>
						<id>enforce-no-snapshots</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireReleaseDeps>
									<message>Release configuration includes SNAPSHOT dependencies</message>
									<onlyWhenRelease>true</onlyWhenRelease>
								</requireReleaseDeps>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
	    <dependency>
	        <groupId>com.blackhillsoftware</groupId>
	        <artifactId>bhs-gimapi</artifactId>
	        <version>${bhs-gimapi.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>com.fasterxml.jackson.core</groupId>
	        <artifactId>jackson-annotations</artifactId>
	        <version>${jackson.annotations.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>tools.jackson.core</groupId>
	        <artifactId>jackson-databind</artifactId>
	        <version>${jackson.databind.version}</version>
	    </dependency>
	</dependencies>
</project>
